--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #fdfdfd;
+    background-color: #fdfdfd; pink
 }
 
 /* Header */
